--- a/README
+++ b/README
@@ -19,4 +19,4 @@ Aim of this project is to
 1. Clean the three datasets using Mapreduce
 2. Profiling of the three datasets using Mapreduce
 3. Merging all three datasets into one dataset
-4. Using Hive, run queries, analyze and vizualize the results
+4. Using Hive and Trino to run queries, analyze and vizualize the results
